# inferno-tactix

./: .dockerignore  .gitignore  .prettierignore  .pylintrc  coordinate_picker.ipynb  data_coordinates.csv  data_re.ipynb  dataset_generator.ipynb  docker-compose.yml  non_wildfire_coordinates.csv  non_wildfire_coordinates_updated.csv  readme.md  requirements.txt  ruff.toml  wildfire_coordintes.csv
.pylint.d/: inferno_headless_1.stats
apps/: app.py  requirements.txt
apps/api/: Dockerfile  Dockerfile.firecastbot  README.md  pyproject.toml  requirements.txt  requirements_firecastbot.txt
apps/api/evals/: models.openrouter.additional.json  models.openrouter.all.json  models.openrouter.free.json  models.openrouter.paid.json  models.sample.json  models.top4.upgraded.json  prompts.sample.json  quality_cases.strict.json  rag_model_compare_openrouter.json  rag_model_compare_openrouter_gemini_judge.json  rag_model_compare_openrouter_paid_gemini_judge.additional.json  rag_model_compare_openrouter_paid_gemini_judge.json  rag_model_compare_upgraded_bge_groq_judge.json  rag_quality_eval_top4_groq_judge.json  retrieval_cases.doctrine.json  retrieval_eval_bge_base.json
apps/api/src/inferno_api/: __main__.py  app.py  app_firecastbot.py  create_env.py  firecastbot.py  firecastbot_runtime.py  generate_timeseries.py  rag_model_compare.py  rag_model_compare_openrouter.py  rag_model_compare_openrouter_gemini_judge.py  rag_model_compare_openrouter_paid_gemini_judge.py  rag_model_compare_upgraded.py  rag_quality_eval.py  rag_retrieval_eval.py  rejudge_failed_rows.py  rejudge_quality_failed_rows.py
apps/api/tests/: conftest.py  test_firecastbot.py
apps/headless-client/: Dockerfile  README.md  pyproject.toml
apps/headless-client/src/inferno_headless/: __init__.py  __main__.py  headless_client.py
apps/simulator/: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/simulator/simulator/: .dockerignore
apps/simulator/src/inferno_sim/: FeatureExtractor.py  __main__.py  simulation.py  train.py
environment/: FeatureExtractor.py  infernoenv.py  package-lock.json  setup.txt  train.py  (+3 more)
(+310 files in other folders)
