[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inferno-api"
version = "0.1.0"
description = "Flask inference and environment-generation API for Inferno-Tactix"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4==4.13.3",
  "faiss-cpu==1.8.0.post1",
  "Flask==3.0.3",
  "Flask-Cors==5.0.0",
  "groq==0.13.1",
  "huggingface-hub==0.30.1",
  "langchain==0.3.9",
  "langchain-community==0.3.9",
  "langchain-text-splitters==0.3.2",
  "earthengine-api==1.4.9",
  "joblib==1.4.2",
  "netCDF4==1.7.2",
  "numpy==1.24.3",
  "openai==1.57.0",
  "pandas==2.0.3",
  "Pillow==10.4.0",
  "pypdf==5.1.0",
  "python-dotenv==1.0.1",
  "rasterio==1.3.11",
  "requests==2.32.3",
  "scikit-learn==1.3.2",
  "sentence-transformers==3.3.1",
  "torch==2.4.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
