[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inferno-headless"
version = "0.1.0"
description = "Headless browser automation for Inferno-Tactix"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "playwright==1.35.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
