[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inferno-simulator"
version = "0.1.0"
description = "WebSocket wildfire simulation and RL service for Inferno-Tactix"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "gymnasium==1.0.0",
  "numpy==1.24.3",
  "pillow==10.4.0",
  "stable-baselines3==2.4.1",
  "tensorboard==2.13.0",
  "tensorboard-data-server==0.7.2",
  "torch==2.4.1",
  "websockets==10.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
